tests/models/struct/unnamed/u128/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    u128
);
fn main() {}
